# saorsa-fec

./: .gitignore  .valgrind.supp  CHANGELOG.md  CI_STATUS.md  CLAUDE.md  Cargo.toml  README.md  check-rsa-vulnerability.sh  cobertura.xml  deny.toml  package-lock.json  test_output.txt
.claude/: CLAUDE.md  settings.json
.github/workflows/: ci.yml  docs.yml  performance.yml  release.yml  saorsa-foundation-ci.yml  security.yml
.serena/: project.yml
.serena/cache/rust/: document_symbols_cache_v23-06-25.pkl
benches/: fec_benchmarks.rs
docs/: SAORSA_PQC_MIGRATION_ARCHITECTURE.md  v0_3_api_guide.md
docs/steering/: architecture-decisions.md  performance-architecture.md  quality-standards.md  technical-roadmap.md
examples/: basic_usage.rs  encryption_modes_demo.rs  fec_demo.rs  performance_test.rs  performance_test.rs.disabled  v0_3_api_demo.rs
src/: chunk_registry.rs  config.rs  crypto.rs  fec.rs  gc.rs  gf256.rs  ida.rs  lib.rs  metadata.rs  pipeline.rs  quantum_crypto.rs  storage.rs  traits.rs  types.rs  version.rs
src/backends/: isa_l.rs  mod.rs  pure_rust.rs
tests/: comprehensive_v3_tests.rs.disabled  property_tests.proptest-regressions  property_tests.rs  v0_3_integration_test.rs
