[package]
name = "saorsa-fec"
version = "0.1.2"
edition = "2024"
authors = ["Saorsa Developers <dev@saorsa.net>"]
license = "AGPL-3.0"
description = "Patent-free erasure coding using systematic Reed-Solomon"
repository = "https://github.com/dirvine/saorsa-fec"
homepage = "https://github.com/dirvine/saorsa-fec"
documentation = "https://docs.rs/saorsa-fec"
readme = "README.md"
keywords = ["erasure-coding", "reed-solomon", "fec", "ida", "p2p"]
categories = ["cryptography", "network-programming", "encoding"]

[dependencies]
# Core dependencies
anyhow = "1.0"
bytes = "1.5"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Math operations
num-traits = "0.2"
bytemuck = "1.14"

# Async support
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Logging
tracing = "0.1"

# Concurrency
parking_lot = "0.12"

# Optional ISA-L backend for x86 optimization
[target.'cfg(target_arch = "x86_64")'.dependencies]
isa-l = { version = "0.1", optional = true }

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
quickcheck = "1.0"
quickcheck_macros = "1.0"
hex = "0.4"
pretty_assertions = "1.4"

[[bench]]
name = "fec_benchmarks"
harness = false

[features]
default = ["pure-rust"]
pure-rust = []
isa-l = ["dep:isa-l"]
bench = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"