[package]
name = "saorsa-fec"
version = "0.2.1"
edition = "2024"
authors = ["Saorsa Developers <dev@saorsa.net>"]
license = "AGPL-3.0"
description = "Patent-free erasure coding using systematic Reed-Solomon"
repository = "https://github.com/dirvine/saorsa-fec"
homepage = "https://github.com/dirvine/saorsa-fec"
documentation = "https://docs.rs/saorsa-fec"
readme = "README.md"
keywords = ["erasure-coding", "reed-solomon", "fec", "ida", "p2p"]
categories = ["cryptography", "network-programming", "encoding"]
exclude = [
    "src/bin/verify_v0_3.rs",
    "tests/comprehensive_v3_tests.rs",
    "tests/v0_3_integration_test.rs",
    "examples/encryption_modes_demo.rs",
    "examples/v0_3_api_demo.rs",
    "docs/v0_3_api_guide.md",
    "node_modules/",
    ".claude/",
    "package*.json"
]

[dependencies]
# Core dependencies
anyhow = "1.0"
bytes = "1.5"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
bincode = "1.3"

# Math operations
num-traits = "0.2"
bytemuck = "1.14"

# Reed-Solomon FEC
reed-solomon-simd = "3.0"

# Async support
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Logging
tracing = "0.1"

# Concurrency
parking_lot = "0.12"

# Encryption and hashing
aes-gcm = "0.10"
blake3 = "1.5"
sha2 = "0.10"
hkdf = "0.12"
zeroize = { version = "1.7", features = ["derive"] }
rand_core = "0.6"
subtle = "2.5"

# Data persistence
serde_json = "1.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls"], default-features = false }

# Additional utilities
hex = "0.4"
rand = "0.8"
flate2 = "1.0"

# Optional ISA-L backend for x86 optimization
[target.'cfg(target_arch = "x86_64")'.dependencies]
isa-l = { version = "0.1", optional = true }

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
quickcheck = "1.0"
quickcheck_macros = "1.0"
pretty_assertions = "1.4"
tempfile = "3.8"

[[bench]]
name = "fec_benchmarks"
harness = false

[features]
default = ["pure-rust"]
pure-rust = []
isa-l = ["dep:isa-l"]
bench = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"